Bug 379435 - expose role and states as string in nsIAccessibleRetrieval, r=me, aaronlev, sr=neil